[tool.poetry]
name = "formood"
version = "0.1.0"
description = ""
authors = ["zcmn <zhecaman@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
lxml = "^4.9.3"
asyncio = "^3.4.3"
aiohttp = "^3.8.6"

[tool.poetry.dev-dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
